strip MSAL and leave stubs

--- a/apps/duality-social-node/package.json
+++ b/apps/duality-social-node/package.json
@@ -13,12 +13,10 @@
   "author": "Freddie Mercurial (Jessica M.) <jessica@digitaldefiance.org>",
   "license": "MIT",
   "dependencies": {
-    "@azure/cosmos": "^3.17.2",
-    "@azure/storage-blob": "^12.13.0",
     "@pusher/push-notifications-server": "^1.2.6",
     "body-parser": "^1.20.2",
     "compression": "^1.7.4",
-    "connect-mongodb-session": "^3.1.1",
+    "connect-mongo": "^5.0.0",
     "cors": "^2.8.5",
     "express": "^4.18.2",
     "express-session": "^1.17.3",
@@ -28,21 +26,14 @@
     "jwks-rsa": "^3.0.1",
     "morgan": "^1.10.0",
     "openai": "^3.1.0",
-    "passport": "^0.6.0",
-    "passport-azure-ad": "^4.3.5",
-    "passport-local": "^1.0.0",
     "worker-threads": "^1.0.0"
   },
   "devDependencies": {
-    "@azure/msal-node": "^1.15.0",
     "@types/compression": "^1.7.2",
-    "@types/connect-mongodb-session": "^2.4.4",
     "@types/cors": "^2.8.13",
-    "@types/express-session": "^1.17.6",
+    "@types/express-session": "^1.17.7",
     "@types/jsonwebtoken": "^9.0.1",
     "@types/morgan": "^1.9.4",
-    "@types/passport": "^1.0.12",
-    "@types/passport-azure-ad": "^4.3.1",
     "@types/sharp": "^0.31.1",
     "fs": "^0.0.1-security",
     "https": "^1.0.0"
