--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -6,6 +6,7 @@
     {
       "files": ["*.ts", "*.tsx", "*.js", "*.jsx"],
       "rules": {
+        "@nx/dependency-checks": "error",
         "@nrwl/nx/enforce-module-boundaries": [
           "error",
           {
