--- a/libs/duality-social-lib/project.json
+++ b/libs/duality-social-lib/project.json
@@ -8,7 +8,7 @@
       "executor": "@nrwl/linter:eslint",
       "outputs": ["{options.outputFile}"],
       "options": {
-        "lintFilePatterns": ["libs/duality-social-lib/**/*.ts"]
+        "lintFilePatterns": ["libs/duality-social-lib/**/*.ts", "libs/duality-social-lib/package.json"]
       }
     },
     "test": {
