--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "build:all": "npx nx build duality-social-lib && npx nx build duality-social-angular && npx nx build duality-social-node",
     "build:all:verbose": "npx nx build duality-social-lib --verbose && npx nx build duality-social-angular --verbose && npx nx build duality-social-node --verbose",
     "build:all:dev": "npx nx build duality-social-lib --configuration development && npx nx build duality-social-angular --configuration development && npx nx build duality-social-node --configuration development",
+    "build:node": "npx nx build duality-social-node",
+    "build:node:dev": "npx nx build duality-social-node --configuration development",
     "test:all": "npx nx test duality-social-lib && npx nx test duality-social-angular && npx nx test duality-social-node",
     "build": "yarn build:all",
     "serve": "npx nx serve duality-social-node --configuration production",
@@ -24,7 +26,6 @@
     "migrate:latest": "npx nx migrate latest",
     "migrate:run-migrations": "npx nx migrate --run-migrations"
   },
-  "private": true,
   "dependencies": {
     "@angular/animations": "~15.2.0",
     "@angular/common": "~15.2.0",
@@ -37,7 +38,8 @@
     "@docusaurus/core": "2.1.0",
     "@docusaurus/preset-classic": "2.1.0",
     "@mdx-js/react": "^1.6.22",
-    "@nrwl/angular": "16.3.2",
+    "@nrwl/angular": "16.6.0",
+    "@nrwl/nx-cloud": "^16.2.0",
     "@types/express": "~4.17.13",
     "axios": "^1.0.0",
     "bcryptjs": "^2.4.3",
@@ -45,7 +47,6 @@
     "clsx": "^1.2.1",
     "express": "~4.18.1",
     "mongoose": "^7.0.4",
-    "msal": "^1.4.17",
     "prism-react-renderer": "^1.3.5",
     "pusher": "^5.1.2",
     "pusher-js": "^8.0.2",
@@ -66,24 +67,25 @@
     "@angular/compiler-cli": "~15.2.0",
     "@angular/language-service": "~15.2.0",
     "@docusaurus/module-type-aliases": "2.1.0",
-    "@nrwl/cypress": "16.3.2",
-    "@nrwl/esbuild": "16.3.2",
-    "@nrwl/eslint-plugin-nx": "16.3.2",
-    "@nrwl/jest": "16.3.2",
-    "@nrwl/js": "16.3.2",
-    "@nrwl/linter": "16.3.2",
-    "@nrwl/node": "16.3.2",
-    "@nrwl/nx-cloud": "16.0.5",
-    "@nrwl/web": "16.3.2",
-    "@nrwl/workspace": "16.3.2",
+    "@nrwl/cypress": "16.6.0",
+    "@nrwl/esbuild": "16.6.0",
+    "@nrwl/eslint-plugin-nx": "16.6.0",
+    "@nrwl/jest": "16.6.0",
+    "@nrwl/js": "16.6.0",
+    "@nrwl/lint": "^8.4.0-beta.4",
+    "@nrwl/linter": "16.6.0",
+    "@nrwl/node": "16.6.0",
+    "@nrwl/web": "16.6.0",
+    "@nrwl/workspace": "16.6.0",
     "@nx-plus/docusaurus": "^15.0.0-rc.0",
     "@schematics/angular": "~15.2.0",
     "@types/bcryptjs": "^2.4.2",
     "@types/express": "~4.17.13",
+    "@types/express-session": "^1.17.7",
     "@types/jest": "^29.4.0",
     "@types/node": "~18.7.1",
-    "@typescript-eslint/eslint-plugin": "^5.36.1",
-    "@typescript-eslint/parser": "^5.36.1",
+    "@typescript-eslint/eslint-plugin": "5.62.0",
+    "@typescript-eslint/parser": "5.62.0",
     "cypress": "^12.2.0",
     "esbuild": "^0.17.5",
     "eslint": "~8.15.0",
@@ -93,7 +95,7 @@
     "jest-environment-jsdom": "^29.4.1",
     "jest-environment-node": "^29.4.1",
     "jest-preset-angular": "~13.0.0",
-    "nx": "16.3.2",
+    "nx": "16.6.0",
     "prettier": "^2.6.2",
     "ts-jest": "^29.0.5",
     "ts-node": "10.9.1",
