--- a/package.json
+++ b/package.json
@@ -2,10 +2,9 @@
   "name": "duality-social",
   "version": "0.0.0",
   "license": "MIT",
+  "private": true,
   "scripts": {
     "newSecret": "node -e \"console.log (require('crypto').randomBytes(32).toString ('hex'));\"",
-    "install:all": "yarn && cd libs/duality-social-lib && yarn && cd ../../apps/duality-social-angular && yarn && cd ../../apps/duality-social-node && yarn && cd ../..",
-    "upgrade:all": "yarn upgrade && cd libs/duality-social-lib && yarn upgrade && cd ../../apps/duality-social-angular && yarn upgrade && cd ../duality-social-node && yarn upgrade && cd ../..",
     "build:all": "npx nx build duality-social-lib && npx nx build duality-social-angular && npx nx build duality-social-node",
     "build:all:verbose": "npx nx build duality-social-lib --verbose && npx nx build duality-social-angular --verbose && npx nx build duality-social-node --verbose",
     "build:all:dev": "npx nx build duality-social-lib --configuration development && npx nx build duality-social-angular --configuration development && npx nx build duality-social-node --configuration development",
@@ -27,33 +26,72 @@
     "migrate:run-migrations": "npx nx migrate --run-migrations"
   },
   "dependencies": {
+    "@angular-devkit/build-angular": "~15.2.0",
     "@angular/animations": "~15.2.0",
+    "@angular/cdk": "^15.2.0",
+    "@angular/cli": "~15.2.0",
     "@angular/common": "~15.2.0",
     "@angular/compiler": "~15.2.0",
     "@angular/core": "~15.2.0",
     "@angular/forms": "~15.2.0",
+    "@angular/material": "^15.2.0",
+    "@angular/material-moment-adapter": "^16.0.4",
     "@angular/platform-browser": "~15.2.0",
     "@angular/platform-browser-dynamic": "~15.2.0",
     "@angular/router": "~15.2.0",
+    "@auth0/auth0-react": "^2.2.0",
+    "@auth0/auth0-spa-js": "^2.1.1",
     "@docusaurus/core": "2.1.0",
     "@docusaurus/preset-classic": "2.1.0",
+    "@fortawesome/fontawesome-common-types": "^6.4.2",
     "@mdx-js/react": "^1.6.22",
     "@nrwl/angular": "16.6.0",
-    "@nrwl/nx-cloud": "^16.2.0",
+    "@nrwl/nx-cloud": "16.3.0",
+    "@pusher/push-notifications-server": "^1.2.6",
+    "@pusher/push-notifications-web": "^1.1.0",
+    "@swc/helpers": "~0.5.0",
     "@types/express": "~4.17.13",
+    "@types/jest": "^29.4.0",
+    "@types/linkify-it": "^3.0.2",
+    "@types/markdown-it": "^12.2.3",
+    "auth0": "^3.6.0",
     "axios": "^1.0.0",
     "bcryptjs": "^2.4.3",
+    "body-parser": "^1.20.2",
     "bson": "^5.2.0",
     "clsx": "^1.2.1",
+    "compression": "^1.7.4",
+    "connect-mongo": "^5.0.0",
+    "connect-mongodb-session": "^3.1.1",
+    "cors": "^2.8.5",
     "express": "~4.18.1",
+    "express-session": "^1.17.3",
+    "fast-png": "^6.1.0",
+    "graphql-http": "^1.18.0",
+    "jsonwebtoken": "^9.0.0",
+    "jwks-rsa": "^3.0.1",
+    "jwt-decode": "^3.1.2",
+    "linkify-it": "^4.0.1",
+    "markdown-it": "^13.0.1",
     "mongoose": "^7.0.4",
+    "mongoose-browser": "^5.2.8-pre-2",
+    "morgan": "^1.10.0",
+    "ngx-logger": "^5.0.12",
+    "openai": "^3.1.0",
+    "phone": "^3.1.35",
     "prism-react-renderer": "^1.3.5",
     "pusher": "^5.1.2",
+    "pusher-angular": "^1.0.0",
     "pusher-js": "^8.0.2",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "rxjs": "~7.8.0",
+    "sanitize-html": "^2.10.0",
+    "string-strip-html": "^13.2.3",
+    "tlds": "^1.236.0",
     "tslib": "^2.3.0",
+    "validator": "^13.11.0",
+    "worker-threads": "^1.0.0",
     "zone.js": "~0.12.0"
   },
   "devDependencies": {
@@ -64,6 +102,7 @@
     "@angular-eslint/eslint-plugin-template": "~15.0.0",
     "@angular-eslint/template-parser": "~15.0.0",
     "@angular/cli": "~15.2.0",
+    "@angular/compiler": "~15.2.0",
     "@angular/compiler-cli": "~15.2.0",
     "@angular/language-service": "~15.2.0",
     "@docusaurus/module-type-aliases": "2.1.0",
@@ -80,10 +119,17 @@
     "@nx-plus/docusaurus": "^15.0.0-rc.0",
     "@schematics/angular": "~15.2.0",
     "@types/bcryptjs": "^2.4.2",
+    "@types/compression": "^1.7.2",
+    "@types/connect-mongodb-session": "^2.4.4",
+    "@types/cors": "^2.8.13",
     "@types/express": "~4.17.13",
     "@types/express-session": "^1.17.7",
     "@types/jest": "^29.4.0",
+    "@types/jsonwebtoken": "^9.0.1",
+    "@types/morgan": "^1.9.4",
     "@types/node": "~18.7.1",
+    "@types/sanitize-html": "^2.9.0",
+    "@types/sharp": "^0.31.1",
     "@typescript-eslint/eslint-plugin": "5.62.0",
     "@typescript-eslint/parser": "5.62.0",
     "cypress": "^12.2.0",
@@ -91,14 +137,20 @@
     "eslint": "~8.15.0",
     "eslint-config-prettier": "8.1.0",
     "eslint-plugin-cypress": "^2.10.3",
+    "fs": "^0.0.1-security",
+    "https": "^1.0.0",
     "jest": "^29.5.0",
     "jest-environment-jsdom": "^29.4.1",
     "jest-environment-node": "^29.4.1",
     "jest-preset-angular": "~13.0.0",
+    "jest-util": "^29.5.0",
+    "moment": "^2.29.4",
     "nx": "16.6.0",
     "prettier": "^2.6.2",
     "ts-jest": "^29.0.5",
     "ts-node": "10.9.1",
-    "typescript": "~4.9.5"
+    "typescript": "~4.9.5",
+    "nodemon": "^2.0.21"
   }
 }
+
