get rid of *Keys types that weren't being used

--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
     "compression": "^1.7.4",
     "cors": "^2.8.5",
     "express": "~4.18.1",
+    "express-jwt": "^8.4.1",
     "fast-png": "^6.1.0",
     "graphql-http": "^1.18.0",
     "jsonwebtoken": "^9.0.0",
