--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
   "dependencies": {
     "@auth0/auth0-react": "^2.2.0",
     "@auth0/auth0-spa-js": "^2.1.1",
+    "@coreui/react-pro": "^4.12.4",
     "@docusaurus/core": "2.1.0",
     "@docusaurus/preset-classic": "2.1.0",
     "@fortawesome/fontawesome-common-types": "^6.4.2",
