--- a/package.json
+++ b/package.json
@@ -36,16 +36,15 @@
     "@docusaurus/preset-classic": "2.1.0",
     "@fortawesome/fontawesome-common-types": "^6.4.2",
     "@mdx-js/react": "^1.6.22",
-    "@nrwl/nx-cloud": "16.3.0",
     "@pusher/push-notifications-server": "^1.2.6",
     "@pusher/push-notifications-web": "^1.1.0",
-    "@swc/helpers": "~0.5.0",
+    "@swc/helpers": "~0.5.11",
     "@types/express": "~4.17.13",
     "@types/jest": "^29.4.0",
     "@types/linkify-it": "^3.0.2",
     "@types/markdown-it": "^12.2.3",
     "auth0": "^3.6.0",
-    "axios": "^1.0.0",
+    "axios": "1.7.2",
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.20.2",
     "bson": "^5.2.0",
@@ -70,8 +69,8 @@
     "prism-react-renderer": "^1.3.5",
     "pusher": "^5.1.2",
     "pusher-js": "^8.0.2",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
+    "react": "18.3.1",
+    "react-dom": "18.3.1",
     "react-router-dom": "6.11.2",
     "rxjs": "~7.8.0",
     "sanitize-html": "^2.10.0",
@@ -83,29 +82,30 @@
     "zone.js": "~0.12.0"
   },
   "devDependencies": {
+    "@babel/core": "^7.14.5",
     "@babel/preset-react": "^7.14.5",
     "@docusaurus/module-type-aliases": "2.1.0",
-    "@nrwl/cypress": "16.6.0",
-    "@nrwl/esbuild": "16.6.0",
-    "@nrwl/eslint-plugin-nx": "16.6.0",
-    "@nrwl/jest": "16.6.0",
-    "@nrwl/js": "16.6.0",
+    "@nrwl/cypress": "19.4.3",
+    "@nrwl/esbuild": "19.4.3",
+    "@nrwl/eslint-plugin-nx": "19.4.3",
+    "@nrwl/jest": "19.4.3",
+    "@nrwl/js": "19.4.3",
     "@nrwl/lint": "^8.4.0-beta.4",
-    "@nrwl/linter": "16.6.0",
-    "@nrwl/node": "16.6.0",
-    "@nrwl/web": "16.6.0",
-    "@nrwl/workspace": "16.6.0",
+    "@nrwl/linter": "19.4.3",
+    "@nrwl/node": "19.4.3",
+    "@nrwl/web": "19.4.3",
+    "@nrwl/workspace": "19.4.3",
     "@nx-plus/docusaurus": "^15.0.0-rc.0",
-    "@nx/cypress": "16.6.0",
-    "@nx/jest": "16.6.0",
-    "@nx/js": "16.6.0",
-    "@nx/react": "16.6.0",
-    "@nx/webpack": "16.6.0",
+    "@nx/cypress": "19.4.3",
+    "@nx/jest": "19.4.3",
+    "@nx/js": "19.4.3",
+    "@nx/react": "19.4.3",
+    "@nx/webpack": "19.4.3",
     "@pmmmwh/react-refresh-webpack-plugin": "^0.5.7",
     "@svgr/webpack": "^8.0.1",
-    "@swc/cli": "~0.1.62",
-    "@swc/core": "~1.3.51",
-    "@testing-library/react": "14.0.0",
+    "@swc/cli": "~0.3.12",
+    "@swc/core": "~1.5.7",
+    "@testing-library/react": "15.0.6",
     "@types/auth0": "^3.3.3",
     "@types/bcryptjs": "^2.4.2",
     "@types/compression": "^1.7.2",
@@ -116,20 +116,20 @@
     "@types/jest": "^29.4.0",
     "@types/jsonwebtoken": "^9.0.1",
     "@types/morgan": "^1.9.4",
-    "@types/node": "18.14.2",
-    "@types/react": "18.2.14",
-    "@types/react-dom": "18.2.6",
+    "@types/node": "18.16.9",
+    "@types/react": "18.3.1",
+    "@types/react-dom": "18.3.0",
     "@types/sanitize-html": "^2.9.0",
     "@types/sharp": "^0.31.1",
     "@types/validator": "^13.11.1",
-    "@typescript-eslint/eslint-plugin": "5.62.0",
-    "@typescript-eslint/parser": "5.62.0",
+    "@typescript-eslint/eslint-plugin": "7.9.0",
+    "@typescript-eslint/parser": "7.9.0",
     "babel-jest": "^29.4.1",
-    "cypress": "^12.16.0",
-    "esbuild": "^0.17.5",
-    "eslint": "~8.15.0",
-    "eslint-config-prettier": "8.1.0",
-    "eslint-plugin-cypress": "^2.10.3",
+    "cypress": "^13.0.0",
+    "esbuild": "^0.19.2",
+    "eslint": "8.57.0",
+    "eslint-config-prettier": "9.1.0",
+    "eslint-plugin-cypress": "^2.13.4",
     "eslint-plugin-import": "2.27.5",
     "eslint-plugin-jsx-a11y": "6.7.1",
     "eslint-plugin-react": "7.32.2",
@@ -142,7 +142,7 @@
     "jest-util": "^29.5.0",
     "moment": "^2.29.4",
     "nodemon": "^2.0.21",
-    "nx": "16.6.0",
+    "nx": "19.4.3",
     "prettier": "^2.6.2",
     "react-refresh": "^0.10.0",
     "ts-jest": "^29.1.0",
