--- a/package.json
+++ b/package.json
@@ -36,10 +36,9 @@
     "@auth0/auth0-react": "^2.2.0",
     "@auth0/auth0-spa-js": "^2.1.1",
     "@coreui/react-pro": "^4.12.4",
-    "@docusaurus/core": "2.1.0",
-    "@docusaurus/preset-classic": "2.1.0",
     "@fortawesome/fontawesome-common-types": "^6.4.2",
     "@mdx-js/react": "^1.6.22",
+    "@nx/workspace": "^19.5.1",
     "@pusher/push-notifications-server": "^1.2.6",
     "@pusher/push-notifications-web": "^1.1.0",
     "@swc/helpers": "~0.5.11",
@@ -89,7 +88,6 @@
   "devDependencies": {
     "@babel/core": "^7.14.5",
     "@babel/preset-react": "^7.14.5",
-    "@docusaurus/module-type-aliases": "2.1.0",
     "@nrwl/cypress": "19.4.3",
     "@nrwl/esbuild": "19.4.3",
     "@nrwl/eslint-plugin-nx": "19.4.3",
@@ -100,7 +98,6 @@
     "@nrwl/node": "19.4.3",
     "@nrwl/web": "19.4.3",
     "@nrwl/workspace": "19.4.3",
-    "@nx-plus/docusaurus": "^15.0.0-rc.0",
     "@nx/cypress": "19.4.3",
     "@nx/jest": "19.4.3",
     "@nx/js": "19.4.3",
