try to slim down fields/properties

--- a/package.json
+++ b/package.json
@@ -33,8 +33,6 @@
     "migrate:run-migrations": "npx nx migrate --run-migrations"
   },
   "dependencies": {
-    "@auth0/auth0-react": "^2.2.0",
-    "@auth0/auth0-spa-js": "^2.1.1",
     "@coreui/react-pro": "^4.12.4",
     "@fortawesome/fontawesome-common-types": "^6.4.2",
     "@mdx-js/react": "^1.6.22",
@@ -46,7 +44,6 @@
     "@types/jest": "^29.4.0",
     "@types/linkify-it": "^3.0.2",
     "@types/markdown-it": "^12.2.3",
-    "auth0": "^3.6.0",
     "axios": "1.7.2",
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.20.2",
@@ -58,8 +55,9 @@
     "express": "~4.18.1",
     "express-jwt": "^8.4.1",
     "fast-png": "^6.1.0",
+    "franc": "^6.2.0",
     "graphql-http": "^1.18.0",
-    "jsonwebtoken": "^9.0.0",
+    "jsonwebtoken": "^9.0.2",
     "jwks-rsa": "^3.0.1",
     "jwt-decode": "^3.1.2",
     "linkify-it": "^4.0.1",
@@ -108,7 +106,6 @@
     "@swc/cli": "~0.3.12",
     "@swc/core": "~1.5.7",
     "@testing-library/react": "15.0.6",
-    "@types/auth0": "^3.3.3",
     "@types/bcryptjs": "^2.4.2",
     "@types/compression": "^1.7.2",
     "@types/connect-mongodb-session": "^2.4.4",
