--- a/package.json
+++ b/package.json
@@ -36,7 +36,7 @@
     "@coreui/react-pro": "^4.12.4",
     "@fortawesome/fontawesome-common-types": "^6.4.2",
     "@mdx-js/react": "^1.6.22",
-    "@nx/workspace": "^19.5.1",
+    "@nx/workspace": "19.5.1",
     "@pusher/push-notifications-server": "^1.2.6",
     "@pusher/push-notifications-web": "^1.1.0",
     "@swc/helpers": "~0.5.11",
@@ -86,21 +86,21 @@
   "devDependencies": {
     "@babel/core": "^7.14.5",
     "@babel/preset-react": "^7.14.5",
-    "@nrwl/cypress": "19.4.3",
-    "@nrwl/esbuild": "19.4.3",
-    "@nrwl/eslint-plugin-nx": "19.4.3",
-    "@nrwl/jest": "19.4.3",
-    "@nrwl/js": "19.4.3",
+    "@nrwl/cypress": "19.5.1",
+    "@nrwl/esbuild": "19.5.1",
+    "@nrwl/eslint-plugin-nx": "19.5.1",
+    "@nrwl/jest": "19.5.1",
+    "@nrwl/js": "19.5.1",
     "@nrwl/lint": "^8.4.0-beta.4",
-    "@nrwl/linter": "19.4.3",
-    "@nrwl/node": "19.4.3",
-    "@nrwl/web": "19.4.3",
-    "@nrwl/workspace": "19.4.3",
-    "@nx/cypress": "19.4.3",
-    "@nx/jest": "19.4.3",
-    "@nx/js": "19.4.3",
-    "@nx/react": "19.4.3",
-    "@nx/webpack": "19.4.3",
+    "@nrwl/linter": "19.5.1",
+    "@nrwl/node": "19.5.1",
+    "@nrwl/web": "19.5.1",
+    "@nrwl/workspace": "19.5.1",
+    "@nx/cypress": "19.5.1",
+    "@nx/jest": "19.5.1",
+    "@nx/js": "19.5.1",
+    "@nx/react": "19.5.1",
+    "@nx/webpack": "19.5.1",
     "@pmmmwh/react-refresh-webpack-plugin": "^0.5.7",
     "@svgr/webpack": "^8.0.1",
     "@swc/cli": "~0.3.12",
@@ -121,8 +121,8 @@
     "@types/sanitize-html": "^2.9.0",
     "@types/sharp": "^0.31.1",
     "@types/validator": "^13.11.1",
-    "@typescript-eslint/eslint-plugin": "7.9.0",
-    "@typescript-eslint/parser": "7.9.0",
+    "@typescript-eslint/eslint-plugin": "7.16.1",
+    "@typescript-eslint/parser": "7.16.1",
     "babel-jest": "^29.4.1",
     "cypress": "^13.0.0",
     "esbuild": "^0.19.2",
@@ -141,7 +141,7 @@
     "jest-util": "^29.5.0",
     "moment": "^2.29.4",
     "nodemon": "^2.0.21",
-    "nx": "19.4.3",
+    "nx": "19.5.1",
     "prettier": "^2.6.2",
     "react-refresh": "^0.10.0",
     "ts-jest": "^29.1.0",
