add FONTAWESOME_KEY to env

--- a/.devcontainer/.env.example
+++ b/.devcontainer/.env.example
@@ -1,4 +1,5 @@
 MONGO_DB_USERNAME=duality
 MONGO_DB_PASSWORD=dualitySocialDb!
+FONTAWESOME_KEY=XXXXXXXXXXXXXX
 
 COMPOSE_PROJECT_NAME=duality-social_devcontainer
