rip out openai, fix top menu height/splash/dash

--- a/.devcontainer/docker-compose.yml
+++ b/.devcontainer/docker-compose.yml
@@ -7,6 +7,7 @@ services:
     command: /bin/sh -c "while sleep 1000; do :; done"
     environment:
       NODE_ENV: development
+      FONTAWESOME_KEY: ${FONTAWESOME_KEY}
     depends_on:
       - mongo
     networks:
@@ -18,7 +19,6 @@ services:
     environment:
       - MONGO_INITDB_ROOT_USERNAME=${MONGO_DB_USERNAME}
       - MONGO_INITDB_ROOT_PASSWORD=${MONGO_DB_PASSWORD}
-      - FONTAWESOME_KEY=${FONTAWESOME_KEY}
     volumes:
       - mongo_data:/data/db
     networks:
