--- a/apps/duality-social-node/package.json
+++ b/apps/duality-social-node/package.json
@@ -15,6 +15,7 @@
   "dependencies": {
     "@sendgrid/mail": "^8.1.3",
     "bcrypt": "^5.1.1",
+    "date-fns": "^3.6.0",
     "date-fns-tz": "^3.1.3",
     "express-validator": "^7.2.0"
   },
