--- a/package.json
+++ b/package.json
@@ -33,14 +33,24 @@
     "migrate:run-migrations": "npx nx migrate --run-migrations"
   },
   "dependencies": {
-    "@coreui/react-pro": "^4.12.4",
     "@emotion/react": "^11.13.3",
     "@emotion/styled": "^11.13.0",
-    "@fortawesome/fontawesome-common-types": "^6.4.2",
+    "@fortawesome/fontawesome-common-types": "^6.6.0",
     "@fortawesome/fontawesome-svg-core": "^6.6.0",
+    "@fortawesome/free-brands-svg-icons": "^6.6.0",
     "@fortawesome/free-solid-svg-icons": "^6.6.0",
+    "@fortawesome/pro-duotone-svg-icons": "^6.6.0",
+    "@fortawesome/pro-light-svg-icons": "^6.6.0",
+    "@fortawesome/pro-regular-svg-icons": "^6.6.0",
+    "@fortawesome/pro-solid-svg-icons": "^6.6.0",
+    "@fortawesome/pro-thin-svg-icons": "^6.6.0",
     "@fortawesome/react-fontawesome": "^0.2.2",
-    "@mdx-js/react": "^1.6.22",
+    "@fortawesome/sharp-duotone-solid-svg-icons": "^6.6.0",
+    "@fortawesome/sharp-light-svg-icons": "^6.6.0",
+    "@fortawesome/sharp-regular-svg-icons": "^6.6.0",
+    "@fortawesome/sharp-solid-svg-icons": "^6.6.0",
+    "@fortawesome/sharp-thin-svg-icons": "^6.6.0",
+    "@mdx-js/react": "^3.0.1",
     "@mui/material": "^6.0.1",
     "@mui/styles": "^6.0.1",
     "@nx/workspace": "19.6.4",
@@ -48,7 +58,6 @@
     "@pusher/push-notifications-web": "^1.1.0",
     "@swc/helpers": "~0.5.11",
     "@types/express": "~4.17.13",
-    "@types/jest": "^29.4.0",
     "@types/linkify-it": "^3.0.2",
     "@types/markdown-it": "^12.2.3",
     "axios": "1.7.2",
@@ -62,9 +71,11 @@
     "cors": "^2.8.5",
     "express": "~4.18.1",
     "express-jwt": "^8.4.1",
+    "express-validator": "^7.2.0",
     "fast-png": "^6.1.0",
     "formik": "^2.4.6",
     "franc": "^6.2.0",
+    "graphql": "^16.9.0",
     "graphql-http": "^1.18.0",
     "helmet": "^7.1.0",
     "jsonwebtoken": "^9.0.2",
@@ -76,7 +87,7 @@
     "mongoose-browser": "^5.2.8-pre-2",
     "morgan": "^1.10.0",
     "ngx-logger": "^5.0.12",
-    "openai": "^3.1.0",
+    "openai": "^4.58.1",
     "phone": "^3.1.35",
     "prism-react-renderer": "^1.3.5",
     "pusher": "^5.1.2",
@@ -85,12 +96,12 @@
     "react-dom": "18.3.1",
     "react-router-dom": "6.11.2",
     "rxjs": "~7.8.0",
-    "sanitize-html": "^2.10.0",
+    "sanitize-html": "^2.13.0",
     "string-strip-html": "^13.2.3",
     "tlds": "^1.236.0",
-    "tslib": "^2.3.0",
+    "tslib": "^2.7.0",
     "uuid": "^10.0.0",
-    "validator": "^13.11.0",
+    "validator": "^13.12.0",
     "worker-threads": "^1.0.0",
     "yup": "^1.4.0",
     "zone.js": "~0.12.0"
@@ -161,6 +172,7 @@
     "ts-jest": "^29.1.0",
     "ts-node": "10.9.1",
     "typescript": "~4.9.5",
-    "url-loader": "^4.1.1"
+    "url-loader": "^4.1.1",
+    "webpack": "^5.94.0"
   }
 }
