--- a/apps/duality-social-node/package.json
+++ b/apps/duality-social-node/package.json
@@ -14,13 +14,30 @@
   "license": "MIT",
   "dependencies": {
     "@sendgrid/mail": "^8.1.3",
+    "@types/cors": "^2.8.17",
+    "@types/express-session": "^1.18.0",
+    "@types/uuid": "^10.0.0",
+    "aws-sdk": "^2.1691.0",
+    "axios": "^1.7.7",
     "bcrypt": "^5.1.1",
+    "bson": "^6.8.0",
+    "cors": "^2.8.5",
     "date-fns": "^3.6.0",
     "date-fns-tz": "^3.1.3",
-    "express-validator": "^7.2.0"
+    "express": "^4.19.2",
+    "express-jwt": "^8.4.1",
+    "express-validator": "^7.2.0",
+    "franc": "^6.2.0",
+    "helmet": "^7.1.0",
+    "image-size": "^1.1.1",
+    "jsonwebtoken": "^9.0.2",
+    "multer": "^1.4.5-lts.1",
+    "uuid": "^10.0.0"
   },
   "devDependencies": {
     "@types/bcrypt": "^5.0.2",
+    "@types/express": "^4.17.21",
+    "@types/multer": "^1.4.12",
     "@types/validator": "^13.12.0"
   }
 }
