--- a/libs/duality-social-lib/package.json
+++ b/libs/duality-social-lib/package.json
@@ -4,6 +4,13 @@
   "version": "0.0.1",
   "license": "MIT",
   "dependencies": {
-    "mongoose": "^8.5.1"
+    "@fortawesome/fontawesome-common-types": "^6.6.0",
+    "bson": "^6.8.0",
+    "express-validator": "^7.2.0",
+    "mongoose": "^8.5.1",
+    "sanitize-html": "^2.13.0"
+  },
+  "devDependencies": {
+    "@types/markdown-it": "^14.1.2"
   }
 }
