--- a/package.json
+++ b/package.json
@@ -57,29 +57,14 @@
     "@pusher/push-notifications-server": "^1.2.6",
     "@pusher/push-notifications-web": "^1.1.0",
     "@swc/helpers": "~0.5.11",
-    "@types/express": "~4.17.13",
     "@types/linkify-it": "^3.0.2",
-    "@types/markdown-it": "^12.2.3",
-    "axios": "1.7.2",
-    "bcrypt": "^5.1.1",
-    "bcryptjs": "^2.4.3",
-    "body-parser": "^1.20.2",
-    "bson": "^5.2.0",
     "caniuse-lite": "^1.0.30001642",
     "clsx": "^1.2.1",
     "compression": "^1.7.4",
-    "cors": "^2.8.5",
-    "express": "~4.18.1",
-    "express-jwt": "^8.4.1",
-    "express-validator": "^7.2.0",
     "fast-png": "^6.1.0",
     "formik": "^2.4.6",
-    "franc": "^6.2.0",
     "graphql": "^16.9.0",
     "graphql-http": "^1.18.0",
-    "helmet": "^7.1.0",
-    "jsonwebtoken": "^9.0.2",
-    "jwks-rsa": "^3.0.1",
     "jwt-decode": "^4.0.0",
     "linkify-it": "^4.0.1",
     "markdown-it": "^13.0.1",
@@ -87,17 +72,15 @@
     "mongoose-browser": "^5.2.8-pre-2",
     "morgan": "^1.10.0",
     "ngx-logger": "^5.0.12",
-    "openai": "^4.58.1",
     "phone": "^3.1.35",
     "prism-react-renderer": "^1.3.5",
     "pusher": "^5.1.2",
     "pusher-js": "^8.0.2",
     "react": "18.3.1",
     "react-dom": "18.3.1",
+    "react-easy-crop": "^5.0.8",
     "react-router-dom": "6.11.2",
     "rxjs": "~7.8.0",
-    "sanitize-html": "^2.13.0",
-    "string-strip-html": "^13.2.3",
     "tlds": "^1.236.0",
     "tslib": "^2.7.0",
     "uuid": "^10.0.0",
@@ -129,21 +112,13 @@
     "@swc/cli": "~0.3.12",
     "@swc/core": "~1.5.7",
     "@testing-library/react": "15.0.6",
-    "@types/bcrypt": "^5.0.2",
-    "@types/bcryptjs": "^2.4.2",
     "@types/compression": "^1.7.2",
-    "@types/connect-mongodb-session": "^2.4.4",
-    "@types/cors": "^2.8.13",
-    "@types/express": "~4.17.13",
-    "@types/express-session": "^1.17.7",
     "@types/jest": "29.5.12",
-    "@types/jsonwebtoken": "^9.0.1",
     "@types/morgan": "^1.9.4",
     "@types/node": "18.16.9",
     "@types/react": "18.3.1",
     "@types/react-dom": "18.3.0",
     "@types/sanitize-html": "^2.9.0",
-    "@types/sharp": "^0.31.1",
     "@types/uuid": "^10.0.0",
     "@types/validator": "^13.11.1",
     "@typescript-eslint/eslint-plugin": "7.16.1",
