--- a/apps/duality-social-node/package.json
+++ b/apps/duality-social-node/package.json
@@ -13,11 +13,12 @@
   "author": "Freddie Mercurial (Jessica M.) <jessica@digitaldefiance.org>",
   "license": "MIT",
   "dependencies": {
+    "@aws-sdk/client-s3": "^3.645.0",
+    "@aws-sdk/lib-storage": "^3.645.0",
     "@sendgrid/mail": "^8.1.3",
     "@types/cors": "^2.8.17",
     "@types/express-session": "^1.18.0",
     "@types/uuid": "^10.0.0",
-    "aws-sdk": "^2.1691.0",
     "axios": "^1.7.7",
     "bcrypt": "^5.1.1",
     "bson": "^6.8.0",
