--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
     "build:react": "npx nx build duality-social-react",
     "build:react:dev": "npx nx build duality-social-react --configuration development",
     "test:all": "npx nx test duality-social-lib && npx nx test duality-social-react && npx nx test duality-social-node",
+    "test:fontawesome": "npx nx test duality-social-lib --testFile=libs/duality-social-lib/src/lib/font-awesome/font-awesome.spec.ts",
+    "test:lib": "npx nx test duality-social-lib --testFile=libs/duality-social-lib/src/lib/duality-social-lib.spec.ts",
     "build": "yarn build:all",
     "build:serve": "NODE_ENV=production npx nx run-many --target=build --all --configuration=production && npx nx serve duality-social-node --configuration production",
     "build-serve:dev": "NODE_ENV=development npx nx run-many --target=build --all --configuration=development && npx nx serve duality-social-node --configuration development",
@@ -33,23 +35,12 @@
     "migrate:run-migrations": "npx nx migrate --run-migrations"
   },
   "dependencies": {
+    "@awesome.me/kit-89ec609b07": "^1.0.4",
     "@emotion/react": "^11.13.3",
     "@emotion/styled": "^11.13.0",
     "@fortawesome/fontawesome-common-types": "^6.6.0",
     "@fortawesome/fontawesome-svg-core": "^6.6.0",
-    "@fortawesome/free-brands-svg-icons": "^6.6.0",
-    "@fortawesome/free-solid-svg-icons": "^6.6.0",
-    "@fortawesome/pro-duotone-svg-icons": "^6.6.0",
-    "@fortawesome/pro-light-svg-icons": "^6.6.0",
-    "@fortawesome/pro-regular-svg-icons": "^6.6.0",
-    "@fortawesome/pro-solid-svg-icons": "^6.6.0",
-    "@fortawesome/pro-thin-svg-icons": "^6.6.0",
     "@fortawesome/react-fontawesome": "^0.2.2",
-    "@fortawesome/sharp-duotone-solid-svg-icons": "^6.6.0",
-    "@fortawesome/sharp-light-svg-icons": "^6.6.0",
-    "@fortawesome/sharp-regular-svg-icons": "^6.6.0",
-    "@fortawesome/sharp-solid-svg-icons": "^6.6.0",
-    "@fortawesome/sharp-thin-svg-icons": "^6.6.0",
     "@mdx-js/react": "^3.0.1",
     "@mui/material": "^6.0.1",
     "@mui/styles": "^6.0.1",
