feat: Enhance markdown parsing and improve feed service
- Integrated multiple markdown-it plugins into an array for modular usage.
- Added `@linkedmd/markdown-it-abbr` for abbreviation support in markdown parsing.
- Updated [`parseMarkdown`](command:_github.copilot.openSymbolFromReferences?%5B%22%22%2C%5B%7B%22uri%22%3A%7B%22scheme%22%3A%22file%22%2C%22authority%22%3A%22%22%2C%22path%22%3A%22%2Fworkspace%2Flibs%2Fduality-social-lib%2Fsrc%2Flib%2Fduality-social-lib.spec.ts%22%2C%22query%22%3A%22%22%2C%22fragment%22%3A%22%22%7D%2C%22pos%22%3A%7B%22line%22%3A0%2C%22character%22%3A28%7D%7D%5D%2C%2256adfafa-8233-44fe-afb5-dd3a03cf0ee8%22%5D "Go to definition") function to use the new plugin array.
- Enhanced `FeedService` with new methods and improved existing ones:
  - Added `recalculateViewpointMetadata` method.
  - Updated `getFeed` method to include additional query parameters and aggregation stages.
  - Removed `getMoreFeed` method and consolidated logic into `getFeed`.
  - Added `voteViewpointHumanity` method to replace `rateViewpoint`.
  - Updated `newPost` method to use [`getCharacterCount`](command:_github.copilot.openSymbolFromReferences?%5B%22%22%2C%5B%7B%22uri%22%3A%7B%22scheme%22%3A%22file%22%2C%22authority%22%3A%22%22%2C%22path%22%3A%22%2Fworkspace%2Flibs%2Fduality-social-lib%2Fsrc%2Flib%2Fduality-social-lib.spec.ts%22%2C%22query%22%3A%22%22%2C%22fragment%22%3A%22%22%7D%2C%22pos%22%3A%7B%22line%22%3A0%2C%22character%22%3A9%7D%7D%5D%2C%2256adfafa-8233-44fe-afb5-dd3a03cf0ee8%22%5D "Go to definition") for content length validation.
- Improved `LoginPage` component:
  - Added `useEffect` to redirect authenticated users.
  - Enhanced form handling with `FormikProps` and new `FormValues` interface.
- Updated `NewPost` component:
  - Added `onPostSuccess` callback.
  - Enhanced validation with [`getCharacterCount`](command:_github.copilot.openSymbolFromReferences?%5B%22%22%2C%5B%7B%22uri%22%3A%7B%22scheme%22%3A%22file%22%2C%22authority%22%3A%22%22%2C%22path%22%3A%

--- a/libs/duality-social-lib/package.json
+++ b/libs/duality-social-lib/package.json
@@ -7,9 +7,12 @@
     "@awesome.me/kit-89ec609b07": "^1.0.4",
     "@fortawesome/fontawesome-common-types": "^6.6.0",
     "@fortawesome/fontawesome-svg-core": "^6.6.0",
+    "@linkedmd/markdown-it-abbr": "^1.0.5",
     "bson": "^6.8.0",
     "express-validator": "^7.2.0",
     "known-css-properties": "^0.34.0",
+    "markdown-it-container": "^4.0.0",
+    "markdown-it-deflist": "^3.0.0",
     "markdown-it-mark": "^4.0.0",
     "markdown-it-table-of-contents": "^0.8.0",
     "markdown-it-todo-lists": "^0.1.7",
