--- a/apps/duality-social-node/package.json
+++ b/apps/duality-social-node/package.json
@@ -39,6 +39,8 @@
     "@types/bcrypt": "^5.0.2",
     "@types/express": "^4.17.21",
     "@types/multer": "^1.4.12",
-    "@types/validator": "^13.12.0"
+    "@types/supertest": "^6.0.2",
+    "@types/validator": "^13.12.0",
+    "supertest": "^7.0.0"
   }
 }
