--- a/apps/duality-social-node/tsconfig.app.json
+++ b/apps/duality-social-node/tsconfig.app.json
@@ -2,7 +2,7 @@
   "extends": "./tsconfig.json",
   "compilerOptions": {
     "outDir": "../../dist/out-tsc",
-    "module": "commonjs",
+    "module": "NodeNext",
     "types": ["node"],
     "typeRoots": ["./node_modules/@types", "./src/types"]
   },
