--- a/package.json
+++ b/package.json
@@ -15,7 +15,9 @@
     "build:node:dev": "npx nx build duality-social-node --configuration development",
     "build:react": "npx nx build duality-social-react",
     "build:react:dev": "npx nx build duality-social-react --configuration development",
-    "lint:all": "npx nx run-many --target=lint --all",
+    "lint:md": "npx markdownlint '**/*.md' --fix",
+    "lint:md:prettier": "prettier --write '**/*.md'",
+    "lint:all": "npx nx run-many --target=lint --all && yarn lint:md",
     "test:lib:libonly": "npx nx test duality-social-lib --testFile=libs/duality-social-lib/src/lib/duality-social-lib.spec.ts",
     "test:lib:fontawesome": "npx nx test duality-social-lib --testFile=libs/duality-social-lib/src/lib/font-awesome/font-awesome.spec.ts",
     "test:lib:all": "npx nx test duality-social-lib",
@@ -128,6 +130,7 @@
     "eslint-plugin-cypress": "^2.13.4",
     "eslint-plugin-import": "2.27.5",
     "eslint-plugin-jsx-a11y": "6.7.1",
+    "eslint-plugin-markdown": "^5.1.0",
     "eslint-plugin-prettier": "^5.2.1",
     "eslint-plugin-react": "7.32.2",
     "eslint-plugin-react-hooks": "4.6.0",
@@ -138,6 +141,7 @@
     "jest-environment-node": "^29.7.0",
     "jest-util": "^29.5.0",
     "jsonc-parser": "^3.3.1",
+    "markdownlint-cli": "^0.41.0",
     "moment": "^2.29.4",
     "nodemon": "^2.0.21",
     "nx": "19.6.4",
