--- a/apps/duality-social-node/package.json
+++ b/apps/duality-social-node/package.json
@@ -39,10 +39,13 @@
     "@faker-js/faker": "^9.0.1",
     "@types/bcrypt": "^5.0.2",
     "@types/express": "^4.17.21",
+    "@types/jest": "^29.5.13",
     "@types/multer": "^1.4.12",
     "@types/node": "^22.5.5",
     "@types/supertest": "^6.0.2",
     "@types/validator": "^13.12.0",
+    "jest": "^29.7.0",
+    "jest-mock-extended": "^3.0.7",
     "supertest": "^7.0.0"
   }
 }
