--- a/apps/duality-social-node/tsconfig.spec.json
+++ b/apps/duality-social-node/tsconfig.spec.json
@@ -8,6 +8,9 @@
   },
   "include": [
     "jest.config.ts",
+    "__mocks__/**/*.ts",
+    "src/mocks/*.ts",
+    "src/mocks/models/**/*.ts",
     "src/**/*.test.ts",
     "src/**/*.spec.ts",
     "src/**/*.d.ts"
