--- a/package.json
+++ b/package.json
@@ -139,6 +139,7 @@
     "jest": "29.7.0",
     "jest-environment-jsdom": "29.7.0",
     "jest-environment-node": "^29.7.0",
+    "jest-mock-extended": "^3.0.7",
     "jest-util": "^29.5.0",
     "jsonc-parser": "^3.3.1",
     "markdownlint-cli": "^0.41.0",
