nx migrate latest

--- a/package.json
+++ b/package.json
@@ -37,7 +37,8 @@
     "azure:auth-cycle": "az account clear && az login",
     "clean:all": "rm -rf node_modules dist/ ~/.cache && yarn cache clean",
     "migrate:latest": "npx nx migrate latest",
-    "migrate:run-migrations": "npx nx migrate --run-migrations"
+    "migrate:run-migrations": "npx nx migrate --run-migrations",
+    "upgrade:all": "./do-yarn.sh upgrade"
   },
   "dependencies": {
     "@awesome.me/kit-89ec609b07": "^1.0.4",
@@ -49,7 +50,7 @@
     "@mdx-js/react": "^3.0.1",
     "@mui/material": "^6.0.1",
     "@mui/styles": "^6.0.1",
-    "@nx/workspace": "19.6.4",
+    "@nx/workspace": "19.8.0",
     "@pusher/push-notifications-server": "^1.2.6",
     "@pusher/push-notifications-web": "^1.1.0",
     "@swc/helpers": "~0.5.11",
@@ -89,22 +90,22 @@
     "@babel/core": "^7.14.5",
     "@babel/preset-react": "^7.14.5",
     "@faker-js/faker": "^9.0.1",
-    "@nrwl/cypress": "19.6.4",
-    "@nrwl/esbuild": "19.6.4",
-    "@nrwl/eslint-plugin-nx": "19.6.4",
-    "@nrwl/jest": "19.6.4",
-    "@nrwl/js": "19.6.4",
+    "@nrwl/cypress": "19.8.0",
+    "@nrwl/esbuild": "19.8.0",
+    "@nrwl/eslint-plugin-nx": "19.8.0",
+    "@nrwl/jest": "19.8.0",
+    "@nrwl/js": "19.8.0",
     "@nrwl/lint": "^8.4.0-beta.4",
-    "@nrwl/linter": "19.6.4",
-    "@nrwl/node": "19.6.4",
-    "@nrwl/web": "19.6.4",
-    "@nrwl/workspace": "19.6.4",
-    "@nx/cypress": "19.6.4",
-    "@nx/jest": "19.6.4",
-    "@nx/js": "19.6.4",
-    "@nx/node": "19.6.4",
-    "@nx/react": "19.6.4",
-    "@nx/webpack": "19.6.4",
+    "@nrwl/linter": "19.8.0",
+    "@nrwl/node": "19.8.0",
+    "@nrwl/web": "19.8.0",
+    "@nrwl/workspace": "19.8.0",
+    "@nx/cypress": "19.8.0",
+    "@nx/jest": "19.8.0",
+    "@nx/js": "19.8.0",
+    "@nx/node": "19.8.0",
+    "@nx/react": "19.8.0",
+    "@nx/webpack": "19.8.0",
     "@pmmmwh/react-refresh-webpack-plugin": "^0.5.7",
     "@svgr/webpack": "^8.1.0",
     "@swc-node/register": "~1.9.1",
@@ -145,7 +146,7 @@
     "markdownlint-cli": "^0.41.0",
     "moment": "^2.29.4",
     "nodemon": "^2.0.21",
-    "nx": "19.6.4",
+    "nx": "19.8.0",
     "prettier": "^3.3.3",
     "react-refresh": "^0.10.0",
     "ts-jest": "^29.1.0",
