--- a/apps/duality-social-node/package.json
+++ b/apps/duality-social-node/package.json
@@ -10,18 +10,18 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "dev": "npx nx serve duality-social-node"
   },
-  "author": "Freddie Mercurial (Jessica M.) <jessica@digitaldefiance.org>",
+  "author": "Jessica Mulein <jessica@digitaldefiance.org>",
   "license": "MIT",
   "dependencies": {
     "@aws-sdk/client-s3": "^3.645.0",
     "@aws-sdk/lib-storage": "^3.645.0",
+    "@mui/material": "^6.0.1",
+    "@mui/styles": "^6.0.1",
     "@sendgrid/mail": "^8.1.3",
-    "@types/cors": "^2.8.17",
-    "@types/express-session": "^1.18.0",
-    "@types/uuid": "^10.0.0",
     "axios": "^1.7.7",
     "bcrypt": "^5.1.1",
     "bson": "^6.8.0",
+    "caniuse-lite": "^1.0.30001642",
     "cors": "^2.8.5",
     "date-fns": "^3.6.0",
     "date-fns-tz": "^3.1.3",
@@ -32,11 +32,15 @@
     "helmet": "^7.1.0",
     "image-size": "^1.1.1",
     "jsonwebtoken": "^9.0.2",
+    "mongoose": "^8.5.1",
     "multer": "^1.4.5-lts.1",
     "uuid": "^10.0.0"
   },
   "devDependencies": {
     "@faker-js/faker": "^9.0.1",
+    "@types/cors": "^2.8.17",
+    "@types/express-session": "^1.18.0",
+    "@types/uuid": "^10.0.0",
     "@types/bcrypt": "^5.0.2",
     "@types/express": "^4.17.21",
     "@types/jest": "^29.5.13",
