--- a/libs/duality-social-node-lib/package.json
+++ b/libs/duality-social-node-lib/package.json
@@ -1,5 +1,8 @@
 {
   "name": "duality-social-node-lib",
   "version": "0.0.1",
-  "license": "MIT"
+  "license": "MIT",
+  "dependencies": {
+    "mongoose": "^8.6.3"
+  }
 }
